--- a/RazorLib/Shared/FormEditCommandComponent.razor
+++ b/RazorLib/Shared/FormEditCommandComponent.razor
@@ -104,7 +104,7 @@
         CurrentCommand.Id = CommandEntry.Id;
         CurrentCommand.Name = CommandEntry.Name;
 
-        ApiResponse<EntriesNestedResponseModel> rest_hw_tree = await _refit.GetTreeHardwaresNestedEntries();
+        ApiResponse<EntriesNestedResponseModel> rest_hw_tree = await _refit.HardwaresGetTreeNestedEntries();
         if (rest_hw_tree.Content?.Entries is null)
         {
             _snackbar.Add("", Severity.Error, conf => conf.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
@@ -129,7 +129,7 @@
 
     async Task Rest(bool upd_satte = false)
     {
-        ApiResponse<CommandResponseModel> rest = await _refit.GetCommand(CommandEntry.Id);
+        ApiResponse<CommandResponseModel> rest = await _refit.CommandGet(CommandEntry.Id);
         CurrentCommand = rest.Content!.Command!;
         CurrentCommand.ScriptId = ScriptId;
         EditCommandOrign = (EditCommandViewModel)CurrentCommand;
@@ -148,7 +148,7 @@
         EditCommandOrign.Hidden = CurrentCommand.Hidden;
         EditCommandOrign.PauseSecondsBeforeExecution = CurrentCommand.PauseSecondsBeforeExecution;
 
-        ApiResponse<ResponseBaseModel> rest = await _refit.UpdateCommand(CurrentCommand);
+        ApiResponse<ResponseBaseModel> rest = await _refit.CommandUpdateOrCreate(CurrentCommand);
 
         if (rest.Content?.IsSuccess != true)
         {
@@ -167,7 +167,7 @@
         if (CommandInitDel)
             return;
 
-        ApiResponse<ResponseBaseModel> rest = await _refit.DeleteCommand(CommandEntry.Id);
+        ApiResponse<ResponseBaseModel> rest = await _refit.CommandDelete(CommandEntry.Id);
 
         DeleteCommand(CommandEntry.Id);
     }
