--- a/AbLogServer.Client/Pages/ScriptsPage.razor
+++ b/AbLogServer.Client/Pages/ScriptsPage.razor
@@ -15,7 +15,7 @@
 
 <PageTitle>Скрипты</PageTitle>
 
-<nav class="navbar navbar-light bg-light mb-3">
+<nav class="navbar navbar-light mb-3">
     <div class="container-fluid">
         <span class="navbar-brand">
             Скрипты [<small class="text-muted">пакетные задания</small>]
@@ -30,7 +30,7 @@
 </nav>
 <div class="alert alert-primary" role="alert">
     <cite class="text-primary">Пакеты команд</cite> с настраиваемой логикой выполнения.
-    Команды в скрипте имеют возможность ветвления (по условию), выходов (прекращение выполнения) и пользовательским переходов в произвольный [<span class="text-dark">шаг</span>/<span class="text-dark">команду</span>] другого скрипта.
+    Команды в скрипте имеют возможность ветвления (по условию), выходов (прекращение выполнения) и пользовательским переходов в произвольный [<span class="text-danger-emphasis">шаг</span>/<span class="text-danger-emphasis">команду</span>] другого скрипта.
 </div>
 @if (IsBusyProgress)
 {
