--- a/AbLogServer.Client/Pages/TriggersPage.razor
+++ b/AbLogServer.Client/Pages/TriggersPage.razor
@@ -15,7 +15,7 @@
 
 <PageTitle>Тригеры</PageTitle>
 
-<nav class="navbar navbar-light bg-light mb-3">
+<nav class="navbar navbar-light mb-3">
     <div class="container-fluid">
         <span class="navbar-brand">Тригеры [<small class="text-muted">запуск скриптов по событию</small>]</span>
         <div id="navbarSupportedContent">
