--- a/AbLogServer.Client/Pages/ScriptsPage.razor
+++ b/AbLogServer.Client/Pages/ScriptsPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/scripts-page"
 
-@using RazorLib.Shared.tabs;
+@using RazorLib.Shared.navs.tabs
 @using RazorLib.Shared;
 @using MudBlazor;
 @using SharedLib;
