--- a/AbLogServer.Client/Pages/TriggersPage.razor
+++ b/AbLogServer.Client/Pages/TriggersPage.razor
@@ -1,7 +1,7 @@
 ﻿@page "/triggers-page"
 
+@using RazorLib.Shared.navs.tabs
 @using RazorLib.Shared;
-@using RazorLib.Shared.tabs
 @using SharedLib;
 @using BlazorLib;
 @using MudBlazor;
