--- a/RazorLib/Shared/navs/tabs/TabComponent.razor
+++ b/RazorLib/Shared/navs/tabs/TabComponent.razor
@@ -4,7 +4,7 @@
 
 @inject IJSRuntime js_runtime
 
-@implements ITab
+@implements INav
 
 <li title="@Tooltip">
     <a @onclick="ActivateTabHandler" class="nav-link @TitleCssClass" role="button">
