--- a/AbLogServer.Client/Pages/HardwaresPage.razor
+++ b/AbLogServer.Client/Pages/HardwaresPage.razor
@@ -5,7 +5,7 @@
 @using SharedLib
 
 @inject ILogger<HardwaresPage> _loger
-@inject IRefitService _refit
+@inject IRefitHardwaresService _refit
 
 @inherits BlazorBusyComponentBaseModel
 
