--- a/AbLogServer.Client/Pages/ScriptsPage.razor
+++ b/AbLogServer.Client/Pages/ScriptsPage.razor
@@ -8,7 +8,7 @@
 @using Refit;
 
 @inject ILogger<ScriptsPage> _logger;
-@inject IRefitService _refit;
+@inject IRefitScriptsService _refit;
 @inject ISnackbar _snackbar;
 
 @inherits BlazorBusyComponentBaseModel
