--- a/RazorLib/Shared/CommandsListComponent.razor
+++ b/RazorLib/Shared/CommandsListComponent.razor
@@ -4,7 +4,7 @@
 @using Refit;
 
 @inject ILogger<CommandsListComponent> _logger;
-@inject IRefitService _refit;
+@inject IRefitCommandsService _refit;
 @inject ISnackbar _snackbar;
 
 @inherits BlazorBusyComponentBaseModel
