--- a/RazorLib/Shared/ConditionsComponent.razor
+++ b/RazorLib/Shared/ConditionsComponent.razor
@@ -4,7 +4,7 @@
 @using Refit;
 
 @inject ILogger<ConditionsComponent> _loger;
-@inject IRefitService _refit;
+@inject IRefitConditionsService _refit;
 @inject ISnackbar _snackbar;
 
 @inherits BlazorBusyComponentBaseModel
