--- a/RazorLib/Shared/ScriptContentionComponent.razor
+++ b/RazorLib/Shared/ScriptContentionComponent.razor
@@ -4,7 +4,7 @@
 @using Refit;
 
 @inject ILogger<ScriptContentionComponent> _logger
-@inject IRefitService _refit
+@inject IRefitContentionsService _refit
 @inject ISnackbar _snackbar
 
 @inherits BlazorBusyComponentBaseModel
