--- a/RazorLib/Shared/SelectActionCommand/Controller/ControllerSelectorComponent.razor
+++ b/RazorLib/Shared/SelectActionCommand/Controller/ControllerSelectorComponent.razor
@@ -2,7 +2,7 @@
 @using SharedLib
 @using BlazorLib
 
-@inject IRefitService _refit
+@inject IRefitHardwaresService _refit
 @inject ISnackbar _snackbar
 
 <div class="col-auto">
