--- a/RazorLib/Shared/SelectActionCommand/MainSelectorCommandComponent.razor
+++ b/RazorLib/Shared/SelectActionCommand/MainSelectorCommandComponent.razor
@@ -5,7 +5,7 @@
 @using SharedLib
 
 @inject ILogger<MainSelectorCommandComponent> _loger
-@inject IRefitService _refit
+@inject IRefitHardwaresService _refit
 @inject ISnackbar _snackbar
 
 @inherits BlazorBusyComponentBaseModel
