--- a/RazorLib/Shared/navs/pills/PillsSetComponent.razor
+++ b/RazorLib/Shared/navs/pills/PillsSetComponent.razor
@@ -3,7 +3,7 @@
 <!-- Display the tab headers -->
 
 <CascadingValue Value="this">
-    <nav class="nav nav-pills flex-column flex-sm-row">
+    <nav class="nav nav-pills flex-column flex-sm-row mb-3">
         @ChildContent
     </nav>
 </CascadingValue>
