--- a/AbLogServer.Client/Pages/TriggersPage.razor
+++ b/AbLogServer.Client/Pages/TriggersPage.razor
@@ -7,8 +7,10 @@
 @using MudBlazor;
 @using Refit;
 
+@inject IRefitScriptsService _refit_scripts;
+@inject IRefitTriggersService _refit_trig;
+@inject IRefitHardwaresService _refit_hw;
 @inject ILogger<TriggersPage> _logger;
-@inject IRefitService _refit;
 @inject ISnackbar _snack_bar;
 
 @inherits BlazorBusyComponentBaseModel
@@ -244,7 +246,7 @@ else
     {
         IsBusyProgress = true;
 
-        ApiResponse<ScriptsResponseModel> rest_all_scripts = await _refit.ScriptsGetAll();
+        ApiResponse<ScriptsResponseModel> rest_all_scripts = await _refit_scripts.ScriptsGetAll();
 
         if (rest_all_scripts.Content?.Scripts is null)
         {
@@ -254,7 +256,7 @@ else
 
         Scripts = rest_all_scripts.Content.Scripts;
 
-        ApiResponse<TriggersResponseModel> rest_all_triggers = await _refit.TriggersGetAll();
+        ApiResponse<TriggersResponseModel> rest_all_triggers = await _refit_trig.TriggersGetAll();
         if (rest_all_triggers.Content?.Triggers is null)
         {
             _snack_bar.Add("rest_all_triggers.Content?.Triggers is null ошибка {4334BFB1-481E-460D-9E21-B8782DEA3DCA}", Severity.Error, conf => conf.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
@@ -264,7 +266,7 @@ else
         if (Triggers.Any())
             _curTrig = Triggers.First();
 
-        ApiResponse<EntriesNestedResponseModel> rest_hw_tree = await _refit.HardwaresGetTreeNestedEntries();
+        ApiResponse<EntriesNestedResponseModel> rest_hw_tree = await _refit_hw.HardwaresGetTreeNestedEntries();
         if (rest_hw_tree.Content?.Entries is null)
         {
             _snack_bar.Add("rest_hw_tree.Content?.Entries is null ошибка {7A0F6B2C-8286-4CB5-84AB-7F954831FE94}", Severity.Error, conf => conf.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
@@ -326,7 +328,7 @@ else
         IsBusyProgress = true;
         if (CurrentTrigger.Id > 0)
         {
-            var rest = await _refit.TriggerDelete(CurrentTrigger.Id);
+            var rest = await _refit_trig.TriggerDelete(CurrentTrigger.Id);
             if (!rest.IsSuccessStatusCode)
             {
                 ModalBodyText = $"Ошибка: {rest.StatusCode}";
@@ -362,7 +364,7 @@ else
     async Task SaveTriggerHandle()
     {
         IsBusyProgress = true;
-        ApiResponse<TriggersResponseModel> rest = await _refit.TriggerUpdateOrCreate(CurrentTrigger);
+        ApiResponse<TriggersResponseModel> rest = await _refit_trig.TriggerUpdateOrCreate(CurrentTrigger);
 
         if (!rest.IsSuccessStatusCode)
         {
