--- a/RazorLib/Shared/FormEditCommandComponent.razor
+++ b/RazorLib/Shared/FormEditCommandComponent.razor
@@ -6,7 +6,8 @@
 @using Refit;
 
 @inject ILogger<FormEditCommandComponent> _loger
-@inject IRefitService _refit
+@inject IRefitHardwaresService _refit
+@inject IRefitCommandsService _refit_command
 @inject ISnackbar _snackbar
 
 @inherits BlazorBusyComponentBaseModel
@@ -129,7 +130,7 @@
 
     async Task Rest(bool upd_satte = false)
     {
-        ApiResponse<CommandResponseModel> rest = await _refit.CommandGet(CommandEntry.Id);
+        ApiResponse<CommandResponseModel> rest = await _refit_command.CommandGet(CommandEntry.Id);
         CurrentCommand = rest.Content!.Command!;
         CurrentCommand.ScriptId = ScriptId;
         EditCommandOrign = (EditCommandViewModel)CurrentCommand;
@@ -148,7 +149,7 @@
         EditCommandOrign.Hidden = CurrentCommand.Hidden;
         EditCommandOrign.PauseSecondsBeforeExecution = CurrentCommand.PauseSecondsBeforeExecution;
 
-        ApiResponse<ResponseBaseModel> rest = await _refit.CommandUpdateOrCreate(CurrentCommand);
+        ApiResponse<ResponseBaseModel> rest = await _refit_command.CommandUpdateOrCreate(CurrentCommand);
 
         if (rest.Content?.IsSuccess != true)
         {
@@ -167,7 +168,7 @@
         if (CommandInitDel)
             return;
 
-        ApiResponse<ResponseBaseModel> rest = await _refit.CommandDelete(CommandEntry.Id);
+        ApiResponse<ResponseBaseModel> rest = await _refit_command.CommandDelete(CommandEntry.Id);
 
         DeleteCommand(CommandEntry.Id);
     }
