--- a/RazorLib/Shared/SelectActionCommand/Exit/ExitSelectorComponent.razor
+++ b/RazorLib/Shared/SelectActionCommand/Exit/ExitSelectorComponent.razor
@@ -2,7 +2,7 @@
 @using MudBlazor;
 @using SharedLib
 
-@inject IRefitService _refit
+@inject IRefitHardwaresService _refit
 @inject ISnackbar _snackbar
 
 <div class="col-auto">
