--- a/RazorLib/Shared/hardwares/HaedwareTranslateLayerComponent.razor
+++ b/RazorLib/Shared/hardwares/HaedwareTranslateLayerComponent.razor
@@ -1,18 +1,50 @@
-﻿@using RazorLib.Shared.navs.pills
+﻿@using RazorLib.Shared.html
+@using RazorLib.Shared.navs.pills
+@using SharedLib.IServices;
+@using SharedLib;
+
+@inherits BlazorBusyComponentBaseModel
+
+@inject IHardwaresService _hardwares
 
 <PillsSetComponent>
     <PillComponent Tooltip="Рендеринг" Title="Рендеринг">
-        <span>pill 1</span>
+        <HtmlRootTranslatorComponent @ref="ref1" Html="@html" />
     </PillComponent>
-    <PillComponent Tooltip="Дерево" Title="Дерево">
-        <span>pill 2</span>
+    <PillComponent Tooltip="Парсинг исходного HTML в DOM" Title="Дерево">
+        <HtmlTreeComponent Html="@html" />
     </PillComponent>
-    <PillComponent Tooltip="HTML" Title="HTML">
-        <span>pill 3</span>
+    <PillComponent Tooltip="Исходный HTML" Title="Исходники">
+        <HtmlShowComponent Html="@html" />
     </PillComponent>
 </PillsSetComponent>
-
+<ShowMessagesComponent @ref="showMessages" />
 @code {
-    [Parameter, EditorRequired]
+    [CascadingParameter, EditorRequired]
     public int Id { get; set; }
+
+    ShowMessagesComponent? showMessages;
+    string? html;
+
+    HtmlRootTranslatorComponent? ref1;
+
+    protected override async Task OnInitializedAsync()
+    {
+        if (Id <= 0)
+            return;
+
+        IsBusyProgress = true;
+        HttpResponseModel rest = await _hardwares.GetHardwareHtmlPage(new HardvareGetRequestModel() { HardwareId = Id });
+
+        if (!rest.IsSuccess)
+        {
+            showMessages?.ShowMessages(rest.Messages);
+            return;
+        }
+
+        html = rest.TextPayload;
+        IsBusyProgress = false;
+
+        ref1?.StateHasChangedCall(html);
+    }
 }
