--- a/RazorLib/Shared/hardwares/HardwareNavButtonComponent.razor
+++ b/RazorLib/Shared/hardwares/HardwareNavButtonComponent.razor
@@ -48,6 +48,9 @@ else
     [CascadingParameter, EditorRequired]
     public int Id { get; set; }
 
+    [CascadingParameter]
+    public FormContextModel? FormContext { get; set; }
+
     bool IsExpand = false;
     ShowMessagesComponent? showMessages;
     string? html;
